--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.26)
 project(Lista_3)
 
 set(CMAKE_CXX_STANDARD 98)
+set(CMAKE_EXE_LINKER_FLAGS "-static")
 
 add_executable(Lista_3 src/main.cpp
         include/CTree.h
